fix spacing between the paragraphs

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
@@ -73,6 +73,8 @@
         margin-bottom: 40px
         font-size: 20px
         color: $black
+        p
+            margin-bottom: 1.4rem
     &__btnbox
         display: flex
         justify-content: left
